--- a/src/app/user-manage/components/user-add/add-user.component.html
+++ b/src/app/user-manage/components/user-add/add-user.component.html
@@ -28,7 +28,7 @@
         <div class="text-center">
           <img
             [src]="
-              imageSrc || 'https://bootdey.com/img/Content/avatar/avatar7.png'
+              imageSrc || 'http://localhost:5000/avatars/default_avatar.png'
             "
             class="avatar img-circle img-thumbnail"
             alt="avatar"
