--- a/src/app/coupons-manage/components/coupons-add/coupons-add.component.html
+++ b/src/app/coupons-manage/components/coupons-add/coupons-add.component.html
@@ -2,13 +2,15 @@
   <p class="fs-4 text-black text-center text-capitalize">
     {{ 'coupons.add-coupons' | translate }}
   </p>
-  <mat-icon
+  <mat-button-toggle
     mat-dialog-close
     class="position-absolute"
     style="right: 0; top: 0;"
   >
-    close
-  </mat-icon>
+    <mat-icon>
+      close
+    </mat-icon>
+  </mat-button-toggle>
 </div>
 
 <div class="container-fluid p-0">
