--- a/src/app/product-configuration/components/color-edit/edit-color.component.html
+++ b/src/app/product-configuration/components/color-edit/edit-color.component.html
@@ -2,13 +2,15 @@
   <p class="fs-4 text-black text-center text-capitalize">
     {{ 'product.edit-color' | translate }}
   </p>
-  <mat-icon
+  <mat-button-toggle
     mat-dialog-close
     class="position-absolute"
     style="right: 0; top: 0;"
   >
-    close
-  </mat-icon>
+    <mat-icon>
+      close
+    </mat-icon>
+  </mat-button-toggle>
 </div>
 
 <div class="container-fluid p-0">
@@ -40,11 +42,13 @@
     </div>
   </form>
   <div class="text-end mt-3 w-100">
-    <button mat-button mat-dialog-close>
-      {{ 'cancel' | translate }}
-    </button>
-    <button (click)="onSubmit()" mat-button color="primary" cdkFocusInitial>
-      {{ 'ok' | translate }}
+    <button
+      title="{{ 'save' | translate }}"
+      (click)="onSubmit()"
+      class="btn btn-primary"
+      color="primary"
+    >
+      {{ 'save' | translate }}
     </button>
   </div>
 </div>
