--- a/src/app/product-configuration/components/ram-add/add-ram.component.html
+++ b/src/app/product-configuration/components/ram-add/add-ram.component.html
@@ -2,13 +2,15 @@
   <p class="fs-4 text-black text-center text-capitalize">
     {{ 'product.add-ram' | translate }}
   </p>
-  <mat-icon
+  <mat-button-toggle
     mat-dialog-close
     class="position-absolute"
     style="right: 0; top: 0;"
   >
-    close
-  </mat-icon>
+    <mat-icon>
+      close
+    </mat-icon>
+  </mat-button-toggle>
 </div>
 <div class="container-fluid p-0">
   <form id="addForm" #addForm="ngForm">
@@ -20,14 +22,13 @@
         </label>
 
         <input
-          cdkFocusInitial
           ngModel
           #ram="ngModel"
           name="name"
           placeholder="{{ 'Nhập nội dung' | translate }}"
           type="text"
           required
-          class="form-control form-control-lg"
+          class="form-control input-customize"
         />
         <small
           id="nameHid"
@@ -40,11 +41,13 @@
     </div>
   </form>
   <div class="text-end mt-3 w-100">
-    <button mat-button mat-dialog-close>
-      {{ 'cancel' | translate }}
-    </button>
-    <button (click)="onSubmit()" mat-button color="primary" cdkFocusInitial>
-      {{ 'ok' | translate }}
+    <button
+      title="{{ 'save' | translate }}"
+      (click)="onSubmit()"
+      class="btn btn-primary"
+      color="primary"
+    >
+      {{ 'save' | translate }}
     </button>
   </div>
 </div>
