--- a/src/app/product-manage/components/brand-add/add-brand.component.scss
+++ b/src/app/product-manage/components/brand-add/add-brand.component.scss
@@ -16,3 +16,10 @@ select:focus {
   outline-width: 0;
   font-weight: 400;
 }
+.mat-button-toggle {
+  padding: 0px !important;
+  border: 0px !important;
+  margin-top: -20px;
+  margin-right: -20px;
+  border-radius: 50% !important;
+}
