--- a/src/app/product-manage/components/product-add/product-add.component.html
+++ b/src/app/product-manage/components/product-add/product-add.component.html
@@ -437,7 +437,7 @@
         <div class="row justify-content-between text-left">
           <div class="form-group col-sm-6 flex-column d-flex">
             <label class="form-control-label px-3">
-              {{ 'product.price' | translate }} (VNĐ)
+              {{ 'product.price' | translate }}
             </label>
             <div class="input-group">
               <input
