--- a/src/app/warehouse-manage/components/dialog-create-receipt/dialog-create-receipt.component.html
+++ b/src/app/warehouse-manage/components/dialog-create-receipt/dialog-create-receipt.component.html
@@ -1,9 +1,9 @@
 <div class="nav navbar d-block position-relative">
   <p class="fs-4 text-black text-center text-capitalize">
-    {{ 'product.edit-rom' | translate }}
+    {{ 'placeholder.choose-supplier' | translate }}
   </p>
   <mat-button-toggle
-    mat-dialog-close
+    (click)="goBack()"
     class="position-absolute"
     style="right: 0; top: 0;"
   >
@@ -13,30 +13,34 @@
   </mat-button-toggle>
 </div>
 <div class="container-fluid p-0">
-  <form id="romForm" #romForm="ngForm">
+  <form
+    enctype="multipart/form-data"
+    id="receiptFrom"
+    onsubmit="onSubmit()"
+    #receiptFrom="ngForm"
+  >
     <div class="row justify-content-between">
       <div class="form-group w-100 col-12 flex-column d-flex">
         <label class="form-control-label pb-2">
-          {{ 'product.color' | translate }}
+          {{ 'user.supplier' | translate }}
           <span class="text-danger">*</span>
         </label>
 
-        <input
-          [ngModel]="romInfo?.name"
-          #rom="ngModel"
-          name="name"
-          placeholder="{{ 'placeholder.input-rom' | translate }}"
-          type="text"
+        <select
+          cdkFocusInitial
+          ngModel
+          #supplierId="ngModel"
           required
-          class="form-control input-customize"
-        />
-        <small
-          id="nameHid"
-          class="form-text text-muted"
-          *ngIf="!rom?.valid && (rom?.dirty || rom?.touched)"
+          name="supplierId"
+          class="form-select input-customize form-group"
         >
-          {{ 'notification.invalid-rom' | translate }}
-        </small>
+          <option hidden value="" disabled selected>
+            {{ 'placeholder.choose-supplier' | translate }}
+          </option>
+          <option *ngFor="let item of supplierList" [value]="item.id">
+            {{ item.name }}
+          </option>
+        </select>
       </div>
     </div>
   </form>
