--- a/src/app/product-manage/components/product-add/product-add.component.html
+++ b/src/app/product-manage/components/product-add/product-add.component.html
@@ -75,7 +75,7 @@
               class="form-select input-customize form-control"
             >
               <option hidden value="">
-                {{ 'placeholder.choose-brand' }}
+                {{ 'placeholder.choose-brand' | translate }}
               </option>
               <option *ngFor="let item of brandList" [value]="item.id">
                 {{ item.name }}
@@ -424,7 +424,6 @@
           </div>
         </div>
       </div>
-
       <!-- ------------------------------------------------------------------------------------------------ -->
       <div
         class="bg-white rounded p-3 mt-4"
@@ -437,12 +436,12 @@
         <div class="row justify-content-between text-left">
           <div class="form-group col-sm-6 flex-column d-flex">
             <label class="form-control-label px-3">
-              {{ 'product.price' | translate }}
+              {{ 'product.price' | translate }} (VNĐ)
             </label>
             <div class="input-group">
               <input
-                class="fs-4 fw-bold text-danger input-customize"
-                ngModel
+                class="fs-4 py-0 fw-bold text-danger form-control input-customize"
+                [ngModel]
                 name="original_price"
                 min="0"
                 type="number"
@@ -450,25 +449,61 @@
               />
               <span class="input-group-text input-customize">VNĐ</span>
             </div>
+
+            <small
+              class="form-text text-muted"
+              *ngIf="!color?.valid && (color?.dirty || color?.touched)"
+            >
+              {{ 'notification.invalid-color' | translate }}
+            </small>
           </div>
 
           <div class="form-group col-sm-6 flex-column d-flex">
             <label class="form-control-label px-3">
               {{ 'product.quantity' | translate }}
             </label>
+
             <input
-              disabled="true"
-              class="fs-4 input-customize"
-              ngModel
+              class="fs-4 py-1 fw-bold text-danger form-control input-customize"
+              [ngModel]
               name="quantity"
               min="0"
               type="number"
               required
             />
+
+            <small
+              class="form-text text-muted"
+              *ngIf="!color?.valid && (color?.dirty || color?.touched)"
+            >
+              {{ 'notification.invalid-color' | translate }}
+            </small>
           </div>
         </div>
-      </div>
+        <div class="form-group flex-column d-flex">
+          <label class="form-control-label px-3">
+            {{ 'product.sale-price' | translate }} (VNĐ)
+          </label>
+          <div class="input-group">
+            <input
+              class="fs-4 py-0 fw-bold text-danger form-control input-customize"
+              ngModel
+              name="sale_price"
+              min="0"
+              type="number"
+              required
+            />
+            <span class="input-group-text py-1 input-customize">VNĐ</span>
+          </div>
 
+          <small
+            class="form-text text-muted"
+            *ngIf="!color?.valid && (color?.dirty || color?.touched)"
+          >
+            {{ 'notification.invalid-color' | translate }}
+          </small>
+        </div>
+      </div>
       <!-- ------------------------------------------------------------------------------------------------ -->
       <div
         class="bg-white rounded p-3 mt-4"
