--- a/src/app/supplier-manage/components/supplier-add/add-supplier.component.html
+++ b/src/app/supplier-manage/components/supplier-add/add-supplier.component.html
@@ -9,8 +9,8 @@
       keyboard_backspace
     </mat-icon>
   </mat-button>
-  <p class="text-black-50 fw-bold fs-3 px-3 mt-3">
-    {{ 'user.create-supplier' | translate }}
+  <p class="text-primary fw-bold fs-3 px-3 mt-3">
+    {{ 'user.supplier-list' | translate }}
   </p>
 </div>
 <div class="container bg-white shadow px-3">
