--- a/src/app/supplier-manage/components/supplier-view/view-supplier.component.html
+++ b/src/app/supplier-manage/components/supplier-view/view-supplier.component.html
@@ -9,7 +9,7 @@
       keyboard_backspace
     </mat-icon>
   </mat-button>
-  <p class="text-black-50 fw-bold fs-3 px-3 mt-3">
+  <p class="text-primary fw-bold fs-3 px-3 mt-3">
     {{ 'user.supplier-info' | translate }}
   </p>
 </div>
