--- a/src/app/supplier-manage/containers/supplier/supplier.component.html
+++ b/src/app/supplier-manage/containers/supplier/supplier.component.html
@@ -1,5 +1,5 @@
 <div class="nav navbar mt-4 mb-5 mx-3 d-block">
-  <p class="fs-3 float-start text-primary">
+  <p class="fs-3 fw-bold float-start text-primary">
     {{ 'user.supplier-list' | translate }}
   </p>
   <a routerLink="add" class="text-white">
