--- a/src/app/warehouse-manage/containers/receipts-list/receipts-list.component.html
+++ b/src/app/warehouse-manage/containers/receipts-list/receipts-list.component.html
@@ -1,4 +1,4 @@
-<div class="nav navbar mt-4 mb-5 mx-3 d-block">
+<div class="nav navbar mt-4 mb-3 mx-3 d-block">
   <p class="fs-3 fw-bold float-start text-primary">
     {{ 'warehouse.list-receipt-note' | translate }}
   </p>
@@ -54,7 +54,7 @@
           {{ 'user.supplier' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element?.suppliers?.name }}
+          {{ element?.supplier?.name }}
         </td>
       </ng-container>
 
